Remove all direct access to project.media.
Instead we use the project.get to avoid assuming that the media
dictionary is populatd.  This will make it much easier to change the
underlying implementation and improve the ability to handle more files
easily.  One can in theory load the media lazily.  Also show the
relative path in the search browser instead of just the file name.

--- a/vixen/html/vixen_ui.html
+++ b/vixen/html/vixen_ui.html
@@ -232,7 +232,7 @@
                                'selected': pager.selected == media}"
        title="{{media.path}}"
        >
-   {{media.file_name}}
+   {{media.relpath}}
    </label>
    </div>
    </div>
@@ -431,7 +431,7 @@
       </div>
     </div>
     <div v-else v-if="job_status">
-      <div v-if="project && project.media.length == 0">
+      <div v-if="project && project.number_of_files == 0">
         You need to apply changes once to scan the project before you
         start processing.  Currently no files are available.
       </div>
