Searching now returns the filename and key.
It does not return media instances to keep things much simpler.  This
eliminates the need to create Media instances until they are needed by
the UI.

--- a/vixen/html/vixen_ui.html
+++ b/vixen/html/vixen_ui.html
@@ -230,9 +230,9 @@
    <label v-on:click="pager.select($index)"
    v-bind:class="{'current-index': pager.rel_index == $index,
                                'selected': pager.selected == media}"
-       title="{{media.path}}"
+       title="{{media[1]}}"
        >
-   {{media.relpath}}
+   {{media[0]}}
    </label>
    </div>
    </div>
