Fix issue with notifications on firefox.
It looks like multiple messages show up on chrome which we work around
using a message id which is generated for each message.

--- a/vixen/html/vixen_ui.html
+++ b/vixen/html/vixen_ui.html
@@ -569,8 +569,9 @@
       window.vm = vm;
 
       // Hook up any messages from the UI to display on the view.
-      vm.$watch('ui.message', function(new_val, old_val) {
-          if (new_val.length > 0 && new_val[0].length > 0) {
+       vm.$watch('ui.message', function(new_val, old_val) {
+           if (new_val.length > 0 && new_val[0].length > 0 &&
+               new_val[2] !== old_val[2]) {
               $.notify(new_val[0], new_val[1]);
           }
       });
