Log browser info and update changes.

--- a/vixen/html/vixen_ui.html
+++ b/vixen/html/vixen_ui.html
@@ -557,6 +557,9 @@
           },
       });
 
+      jigna.models.ui.log('Browser information: ' +
+                          navigator.appVersion, 'info');
+
       // The Vue instance.
       var data = Object.assign({}, jigna.models);
       data.window = window;
