Try increasing wait time.

--- a/vixen/html/vixen_ui.html
+++ b/vixen/html/vixen_ui.html
@@ -558,7 +558,7 @@
       });
 
       jigna.models.ui.log('Browser information: ' +
-                          navigator.appVersion, 'info');
+                          navigator.userAgent, 'info');
 
       // The Vue instance.
       var data = Object.assign({}, jigna.models);
