Add buttons to re-order the tags.
This is handy when we want to view the tags in a different order.

--- a/vixen/html/vixen_ui.html
+++ b/vixen/html/vixen_ui.html
@@ -91,6 +91,10 @@
           <option>float</option>
           <option>bool</option>
         </select>
+        <button v-on:click="editor.move_tag_up(parseInt(index))"
+                v-bind:id="'move-tag-up' + index">&uarr;</button>
+        <button v-on:click="editor.move_tag_down(parseInt(index))"
+                v-bind:id="'move-tag-down' + index">&darr;</button>
         <button v-on:click="editor.remove_tag(parseInt(index))"
                 v-bind:id="'remove-tag-' + index">Remove</button>
       </div>
